#8971: Fixed stretched dialog size in IE7, because of long text field values.
git-svn-id: https://svn.ckeditor.com/CKEditor/trunk@7512 da63caf2-3823-0410-a1e8-d69ccee00dfb

--- a/skins/kama/dialog.css
+++ b/skins/kama/dialog.css
@@ -27,7 +27,6 @@ For licensing, see LICENSE.html or http://ckeditor.com/license
 
 	/* 'cke_dialog' element has been fixed positioned in all but IE6, while we
 		need it to be positioned to hold e.g. close button. */
-	position: relative;
 	_position: static;
 }
 
